# vmod_geoIP

./: Makefile.am  README.rst  configure.ac  vmod-maxmind_geoIP.spec
src/: Makefile.am  vmod_maxmind_geoIP.c  vmod_maxmind_geoIP.vcc
src/tests/: test01.vtc  test02.vtc
